seaqt/QtWidgets/gen_qcolordialog.h

typedef struct QCloseEvent QCloseEvent;
typedef struct QColor QColor;
typedef struct QColorDialog QColorDialog;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QObject QObject;
typedef struct QPaintEngine QPaintEngine;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
QColorDialog* QColorDialog_new(QWidget* parent);
QColorDialog* QColorDialog_new2();
QColorDialog* QColorDialog_new3(QColor* initial);
QColorDialog* QColorDialog_new4(QColor* initial, QWidget* parent);
QMetaObject* QColorDialog_metaObject(const QColorDialog* self);
void* QColorDialog_metacast(QColorDialog* self, const char* param1);
int QColorDialog_metacall(QColorDialog* self, int param1, int param2, void** param3);
struct miqt_string QColorDialog_tr(const char* s);
struct miqt_string QColorDialog_trUtf8(const char* s);
void QColorDialog_setCurrentColor(QColorDialog* self, QColor* color);
QColor* QColorDialog_currentColor(const QColorDialog* self);
QColor* QColorDialog_selectedColor(const QColorDialog* self);
void QColorDialog_setOption(QColorDialog* self, int option);
bool QColorDialog_testOption(const QColorDialog* self, int option);
void QColorDialog_setOptions(QColorDialog* self, int options);
int QColorDialog_options(const QColorDialog* self);
void QColorDialog_setVisible(QColorDialog* self, bool visible);
QColor* QColorDialog_getColor();
unsigned int QColorDialog_getRgba();
int QColorDialog_customCount();
QColor* QColorDialog_customColor(int index);
void QColorDialog_setCustomColor(int index, QColor* color);
QColor* QColorDialog_standardColor(int index);
void QColorDialog_setStandardColor(int index, QColor* color);
void QColorDialog_currentColorChanged(QColorDialog* self, QColor* color);
void QColorDialog_connect_currentColorChanged(QColorDialog* self, intptr_t slot);
void QColorDialog_colorSelected(QColorDialog* self, QColor* color);
void QColorDialog_connect_colorSelected(QColorDialog* self, intptr_t slot);
struct miqt_string QColorDialog_tr2(const char* s, const char* c);
struct miqt_string QColorDialog_tr3(const char* s, const char* c, int n);
struct miqt_string QColorDialog_trUtf82(const char* s, const char* c);
struct miqt_string QColorDialog_trUtf83(const char* s, const char* c, int n);
void QColorDialog_setOption2(QColorDialog* self, int option, bool on);
QColor* QColorDialog_getColor1(QColor* initial);
QColor* QColorDialog_getColor2(QColor* initial, QWidget* parent);
QColor* QColorDialog_getColor3(QColor* initial, QWidget* parent, struct miqt_string title);
QColor* QColorDialog_getColor4(QColor* initial, QWidget* parent, struct miqt_string title, int options);
unsigned int QColorDialog_getRgba1(unsigned int rgba);
unsigned int QColorDialog_getRgba2(unsigned int rgba, bool* ok);
unsigned int QColorDialog_getRgba3(unsigned int rgba, bool* ok, QWidget* parent);
bool QColorDialog_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QColorDialog_virtualbase_metaObject(const void* self);
bool QColorDialog_override_virtual_metacast(void* self, intptr_t slot);
void* QColorDialog_virtualbase_metacast(void* self, const char* param1);
bool QColorDialog_override_virtual_metacall(void* self, intptr_t slot);
int QColorDialog_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QColorDialog_override_virtual_setVisible(void* self, intptr_t slot);
void QColorDialog_virtualbase_setVisible(void* self, bool visible);
bool QColorDialog_override_virtual_changeEvent(void* self, intptr_t slot);
void QColorDialog_virtualbase_changeEvent(void* self, QEvent* event);
bool QColorDialog_override_virtual_done(void* self, intptr_t slot);
void QColorDialog_virtualbase_done(void* self, int result);
bool QColorDialog_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QColorDialog_virtualbase_sizeHint(const void* self);
bool QColorDialog_override_virtual_minimumSizeHint(void* self, intptr_t slot);
QSize* QColorDialog_virtualbase_minimumSizeHint(const void* self);
bool QColorDialog_override_virtual_open(void* self, intptr_t slot);
void QColorDialog_virtualbase_open(void* self);
bool QColorDialog_override_virtual_exec(void* self, intptr_t slot);
int QColorDialog_virtualbase_exec(void* self);
bool QColorDialog_override_virtual_accept(void* self, intptr_t slot);
void QColorDialog_virtualbase_accept(void* self);
bool QColorDialog_override_virtual_reject(void* self, intptr_t slot);
void QColorDialog_virtualbase_reject(void* self);
bool QColorDialog_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QColorDialog_virtualbase_keyPressEvent(void* self, QKeyEvent* param1);
bool QColorDialog_override_virtual_closeEvent(void* self, intptr_t slot);
void QColorDialog_virtualbase_closeEvent(void* self, QCloseEvent* param1);
bool QColorDialog_override_virtual_showEvent(void* self, intptr_t slot);
void QColorDialog_virtualbase_showEvent(void* self, QShowEvent* param1);
bool QColorDialog_override_virtual_resizeEvent(void* self, intptr_t slot);
void QColorDialog_virtualbase_resizeEvent(void* self, QResizeEvent* param1);
bool QColorDialog_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QColorDialog_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* param1);
bool QColorDialog_override_virtual_eventFilter(void* self, intptr_t slot);
bool QColorDialog_virtualbase_eventFilter(void* self, QObject* param1, QEvent* param2);
bool QColorDialog_override_virtual_devType(void* self, intptr_t slot);
int QColorDialog_virtualbase_devType(const void* self);
bool QColorDialog_override_virtual_heightForWidth(void* self, intptr_t slot);
int QColorDialog_virtualbase_heightForWidth(const void* self, int param1);
bool QColorDialog_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QColorDialog_virtualbase_hasHeightForWidth(const void* self);
bool QColorDialog_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QColorDialog_virtualbase_paintEngine(const void* self);
bool QColorDialog_override_virtual_event(void* self, intptr_t slot);
bool QColorDialog_virtualbase_event(void* self, QEvent* event);
bool QColorDialog_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QColorDialog_virtualbase_mousePressEvent(void* self, QMouseEvent* event);
bool QColorDialog_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QColorDialog_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* event);
bool QColorDialog_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QColorDialog_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* event);
bool QColorDialog_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QColorDialog_virtualbase_mouseMoveEvent(void* self, QMouseEvent* event);
bool QColorDialog_override_virtual_wheelEvent(void* self, intptr_t slot);
void QColorDialog_virtualbase_wheelEvent(void* self, QWheelEvent* event);
bool QColorDialog_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QColorDialog_virtualbase_keyReleaseEvent(void* self, QKeyEvent* event);
bool QColorDialog_override_virtual_focusInEvent(void* self, intptr_t slot);
void QColorDialog_virtualbase_focusInEvent(void* self, QFocusEvent* event);