seaqt/QtWidgets/gen_qcolordialog.nim


proc fcQColorDialog_new(parent: pointer): ptr cQColorDialog {.importc: "QColorDialog_new".}
proc fcQColorDialog_new2(): ptr cQColorDialog {.importc: "QColorDialog_new2".}
proc fcQColorDialog_new3(initial: pointer): ptr cQColorDialog {.importc: "QColorDialog_new3".}
proc fcQColorDialog_new4(initial: pointer, parent: pointer): ptr cQColorDialog {.importc: "QColorDialog_new4".}
proc fcQColorDialog_metaObject(self: pointer, ): pointer {.importc: "QColorDialog_metaObject".}
proc fcQColorDialog_metacast(self: pointer, param1: cstring): pointer {.importc: "QColorDialog_metacast".}
proc fcQColorDialog_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QColorDialog_metacall".}
proc fcQColorDialog_tr(s: cstring): struct_miqt_string {.importc: "QColorDialog_tr".}
proc fcQColorDialog_trUtf8(s: cstring): struct_miqt_string {.importc: "QColorDialog_trUtf8".}
proc fcQColorDialog_setCurrentColor(self: pointer, color: pointer): void {.importc: "QColorDialog_setCurrentColor".}
proc fcQColorDialog_currentColor(self: pointer, ): pointer {.importc: "QColorDialog_currentColor".}
proc fcQColorDialog_selectedColor(self: pointer, ): pointer {.importc: "QColorDialog_selectedColor".}
proc fcQColorDialog_setOption(self: pointer, option: cint): void {.importc: "QColorDialog_setOption".}
proc fcQColorDialog_testOption(self: pointer, option: cint): bool {.importc: "QColorDialog_testOption".}
proc fcQColorDialog_setOptions(self: pointer, options: cint): void {.importc: "QColorDialog_setOptions".}
proc fcQColorDialog_options(self: pointer, ): cint {.importc: "QColorDialog_options".}
proc fcQColorDialog_setVisible(self: pointer, visible: bool): void {.importc: "QColorDialog_setVisible".}
proc fcQColorDialog_getColor(): pointer {.importc: "QColorDialog_getColor".}
proc fcQColorDialog_getRgba(): cuint {.importc: "QColorDialog_getRgba".}
proc fcQColorDialog_customCount(): cint {.importc: "QColorDialog_customCount".}
proc fcQColorDialog_customColor(index: cint): pointer {.importc: "QColorDialog_customColor".}
proc fcQColorDialog_setCustomColor(index: cint, color: pointer): void {.importc: "QColorDialog_setCustomColor".}
proc fcQColorDialog_standardColor(index: cint): pointer {.importc: "QColorDialog_standardColor".}
proc fcQColorDialog_setStandardColor(index: cint, color: pointer): void {.importc: "QColorDialog_setStandardColor".}
proc fcQColorDialog_currentColorChanged(self: pointer, color: pointer): void {.importc: "QColorDialog_currentColorChanged".}
proc fcQColorDialog_connect_currentColorChanged(self: pointer, slot: int) {.importc: "QColorDialog_connect_currentColorChanged".}
proc fcQColorDialog_colorSelected(self: pointer, color: pointer): void {.importc: "QColorDialog_colorSelected".}
proc fcQColorDialog_connect_colorSelected(self: pointer, slot: int) {.importc: "QColorDialog_connect_colorSelected".}
proc fcQColorDialog_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QColorDialog_tr2".}
proc fcQColorDialog_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QColorDialog_tr3".}
proc fcQColorDialog_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QColorDialog_trUtf82".}
proc fcQColorDialog_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QColorDialog_trUtf83".}
proc fcQColorDialog_setOption2(self: pointer, option: cint, on: bool): void {.importc: "QColorDialog_setOption2".}
proc fcQColorDialog_getColor1(initial: pointer): pointer {.importc: "QColorDialog_getColor1".}
proc fcQColorDialog_getColor2(initial: pointer, parent: pointer): pointer {.importc: "QColorDialog_getColor2".}
proc fcQColorDialog_getColor3(initial: pointer, parent: pointer, title: struct_miqt_string): pointer {.importc: "QColorDialog_getColor3".}
proc fcQColorDialog_getColor4(initial: pointer, parent: pointer, title: struct_miqt_string, options: cint): pointer {.importc: "QColorDialog_getColor4".}
proc fcQColorDialog_getRgba1(rgba: cuint): cuint {.importc: "QColorDialog_getRgba1".}
proc fcQColorDialog_getRgba2(rgba: cuint, ok: ptr bool): cuint {.importc: "QColorDialog_getRgba2".}
proc fcQColorDialog_getRgba3(rgba: cuint, ok: ptr bool, parent: pointer): cuint {.importc: "QColorDialog_getRgba3".}
proc fQColorDialog_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QColorDialog_virtualbase_metaObject".}
proc fcQColorDialog_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_metaObject".}
proc fQColorDialog_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QColorDialog_virtualbase_metacast".}
proc fcQColorDialog_override_virtual_metacast(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_metacast".}
proc fQColorDialog_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QColorDialog_virtualbase_metacall".}
proc fcQColorDialog_override_virtual_metacall(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_metacall".}
proc fQColorDialog_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QColorDialog_virtualbase_setVisible".}
proc fcQColorDialog_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_setVisible".}
proc fQColorDialog_virtualbase_changeEvent(self: pointer, event: pointer): void{.importc: "QColorDialog_virtualbase_changeEvent".}
proc fcQColorDialog_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_changeEvent".}
proc fQColorDialog_virtualbase_done(self: pointer, resultVal: cint): void{.importc: "QColorDialog_virtualbase_done".}
proc fcQColorDialog_override_virtual_done(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_done".}
proc fQColorDialog_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QColorDialog_virtualbase_sizeHint".}
proc fcQColorDialog_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_sizeHint".}
proc fQColorDialog_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QColorDialog_virtualbase_minimumSizeHint".}
proc fcQColorDialog_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_minimumSizeHint".}
proc fQColorDialog_virtualbase_open(self: pointer, ): void{.importc: "QColorDialog_virtualbase_open".}
proc fcQColorDialog_override_virtual_open(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_open".}
proc fQColorDialog_virtualbase_exec(self: pointer, ): cint{.importc: "QColorDialog_virtualbase_exec".}
proc fcQColorDialog_override_virtual_exec(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_exec".}
proc fQColorDialog_virtualbase_accept(self: pointer, ): void{.importc: "QColorDialog_virtualbase_accept".}
proc fcQColorDialog_override_virtual_accept(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_accept".}
proc fQColorDialog_virtualbase_reject(self: pointer, ): void{.importc: "QColorDialog_virtualbase_reject".}
proc fcQColorDialog_override_virtual_reject(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_reject".}
proc fQColorDialog_virtualbase_keyPressEvent(self: pointer, param1: pointer): void{.importc: "QColorDialog_virtualbase_keyPressEvent".}
proc fcQColorDialog_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_keyPressEvent".}
proc fQColorDialog_virtualbase_closeEvent(self: pointer, param1: pointer): void{.importc: "QColorDialog_virtualbase_closeEvent".}
proc fcQColorDialog_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_closeEvent".}
proc fQColorDialog_virtualbase_showEvent(self: pointer, param1: pointer): void{.importc: "QColorDialog_virtualbase_showEvent".}
proc fcQColorDialog_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_showEvent".}
proc fQColorDialog_virtualbase_resizeEvent(self: pointer, param1: pointer): void{.importc: "QColorDialog_virtualbase_resizeEvent".}
proc fcQColorDialog_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_resizeEvent".}
proc fQColorDialog_virtualbase_contextMenuEvent(self: pointer, param1: pointer): void{.importc: "QColorDialog_virtualbase_contextMenuEvent".}
proc fcQColorDialog_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_contextMenuEvent".}
proc fQColorDialog_virtualbase_eventFilter(self: pointer, param1: pointer, param2: pointer): bool{.importc: "QColorDialog_virtualbase_eventFilter".}
proc fcQColorDialog_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_eventFilter".}
proc fQColorDialog_virtualbase_devType(self: pointer, ): cint{.importc: "QColorDialog_virtualbase_devType".}
proc fcQColorDialog_override_virtual_devType(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_devType".}
proc fQColorDialog_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QColorDialog_virtualbase_heightForWidth".}
proc fcQColorDialog_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_heightForWidth".}
proc fQColorDialog_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QColorDialog_virtualbase_hasHeightForWidth".}
proc fcQColorDialog_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_hasHeightForWidth".}
proc fQColorDialog_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QColorDialog_virtualbase_paintEngine".}
proc fcQColorDialog_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_paintEngine".}
proc fQColorDialog_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QColorDialog_virtualbase_event".}
proc fcQColorDialog_override_virtual_event(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_event".}
proc fQColorDialog_virtualbase_mousePressEvent(self: pointer, event: pointer): void{.importc: "QColorDialog_virtualbase_mousePressEvent".}
proc fcQColorDialog_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_mousePressEvent".}
proc fQColorDialog_virtualbase_mouseReleaseEvent(self: pointer, event: pointer): void{.importc: "QColorDialog_virtualbase_mouseReleaseEvent".}
proc fcQColorDialog_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_mouseReleaseEvent".}
proc fQColorDialog_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void{.importc: "QColorDialog_virtualbase_mouseDoubleClickEvent".}
proc fcQColorDialog_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_mouseDoubleClickEvent".}
proc fQColorDialog_virtualbase_mouseMoveEvent(self: pointer, event: pointer): void{.importc: "QColorDialog_virtualbase_mouseMoveEvent".}
proc fcQColorDialog_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_mouseMoveEvent".}
proc fQColorDialog_virtualbase_wheelEvent(self: pointer, event: pointer): void{.importc: "QColorDialog_virtualbase_wheelEvent".}
proc fcQColorDialog_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_wheelEvent".}
proc fQColorDialog_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QColorDialog_virtualbase_keyReleaseEvent".}
proc fcQColorDialog_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_keyReleaseEvent".}
proc fQColorDialog_virtualbase_focusInEvent(self: pointer, event: pointer): void{.importc: "QColorDialog_virtualbase_focusInEvent".}
proc fcQColorDialog_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_focusInEvent".}
